# lgrs

./: AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Code-Of-Conduct.rst  README.rst  environment.yml  environment_dev.yml  pyproject.toml
src/lgrs/: __init__.py  areal.py  bases.py  caching.py  cli.py  coords.py  database.py  easy.py  exceptions.py  idea_01.py  idea_02.py  main.py  toy.py  transformer.py  util.py
src/lgrs/prelim/: LGRS_Coordinate_Conversion_mk7.2.edited.py  LGRS_Coordinate_Conversion_mk7.2.py  LGRS_Grid_Generation_mk7.2.py  README.txt  wrapped.py
src/lgrs/reference/: LGRS_Coordinate_Conversion.py  LGRS_Coordinate_Conversion_edited.py  LGRS_Grid_Generation.py  README.txt  wrapped.py
src/lgrs/srs/: __init__.py  coords.py  srs.py  wkt.py
src/lgrs/temp/: temp1.py  temp2.py
tests/: __init__.py  test_database.py  test_reference.py  test_srs.py
