[build-system]
requires = ["setuptools >= 62.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lgrs"
description = "The lgrs package is software to support the Lunar Grid Reference System."
authors = [
    {name = "Ethan Schaefer", email = "eschaefer@seti.org"}
    {name = "Ross Beyer", email = "rbeyer@seti.org"}
]
dynamic = ["version", "readme"]

requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
]

dependencies = [
    "numpy", "rasterio"
]

[project.scripts]
lgrs = "lgrs.cli:main"

[tools.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.dynamic]
# version = {attr = "synthterrain.__version__"}
version = {attr = "lgrs.__version__"}
readme = {file= "README.rst"}

[tool.pytest.ini_options]
testpaths = ["tests",]


[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(?:-(?P<release>[a-z]+))?"
serialize = ["{major}.{minor}.{patch}-{release}", "{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[tool.bumpversion.parts.release]
values = ["dev", "released"]
optional_value = "released"

[[tool.bumpversion.files]]
filename = "src/lgrs/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
